docs/grammar.txt
<program> ::= { <statement> }

<statement> ::= <declaration>
              | <assignment>
              | <position_block>
              | <print_stmt>
              | <expression_stmt>

<expression_stmt> ::= <expression>

<declaration> ::= <board_decl>
                | <color_decl>
                | <piece_decl>
                | <move_decl>
                | <premove_decl>

<board_decl> ::= ("bd" | "board") <identifier_list> [ ASSIGN <board_init> ]

<identifier_list> ::= <identifier> { COMMA <identifier> }

<board_init> ::= "starting"
               | "empty"
               | <string_literal>

<color_decl> ::= ("tr" | "turn" | "cl" | "color") <identifier> ASSIGN <expression>

<color_value> ::= "white" | "black" | "WHITE" | "BLACK"

<piece_decl> ::= ("pc" | "piece") <identifier> ASSIGN <expression>

<piece_value> ::= <piece_literal>
                | <identifier>

<move_decl> ::= ("mv" | "move") <identifier> ASSIGN <expression>

<premove_decl> ::= "premove" <identifier>
                   LPAREN RPAREN
                   LBRACE [ <premove_body> ] RBRACE

<premove_body> ::= <move_literal> { DOUBLE_COMMA <move_literal> }

<position_block> ::= <identifier> DOT LBRACE [ <move_sequence> ] RBRACE

<move_sequence> ::= <move_item> { COMMA <move_item> }

<move_item> ::= <declaration>
              | <line_branch>
              | <assignment>
              | <print_stmt>
              | <expression_stmt>

<line_branch> ::= "line" <move_literal> LBRACE [ <move_sequence> ] RBRACE

<premove_call> ::= <identifier> LPAREN <premove_arg> RPAREN

<premove_arg> ::= <identifier>
                | <one_side_move_list>

<one_side_move_list> ::= <move_literal> { DOUBLE_COMMA <move_literal> }

<assignment> ::= <identifier> ASSIGN <expression>
               | <board_attribute> ASSIGN <expression>
               | <square_assignment>

<board_attribute> ::= <identifier> DOT ("turn" | "tr" | "color" | "cl")

<square_assignment> ::= <identifier> DOT ("sq" | "square")
                        LPAREN <square_literal> RPAREN
                        ASSIGN <expression>

<print_stmt> ::= "print" LPAREN <expression> RPAREN

<expression> ::= "this"
               | <eval_method_call>
               | <eval_call>
               | <premove_call>
               | <board_access>
               | <string_literal>
               | <piece_value>
               | <square_literal>
               | <move_literal>
               | <color_value>
               | <identifier>

<board_access> ::= <identifier> DOT ("turn" | "tr" | "color" | "cl")
                 | <identifier> DOT ("sq" | "square")
                   LPAREN <square_literal> RPAREN

<eval_call> ::= "eval" LPAREN <expression> RPAREN

<eval_method_call> ::= "eval" DOT "move"
                       LPAREN <expression> RPAREN
